# TG_TO_VK

./: Dockerfile  __init__.py  cfg.py  docker-compose.yaml  main.py  pyproject.toml  relations.json  relations.py
handlers/: add.py  forward.py  start.py
src/: __init__.py  __main__.py  cfg.py  fsm.py  relations.py
src/handlers/: .forward.py.swp  __init__.py  add.py  forward.py  new_chat_member.py  start.py
