[tool.poetry]
name = "tg-to-vk"
version = "0.1.0"
description = ""
authors = ["Fast Code <fast.code.auth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.5.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
